增加表单弹框

--- a/application.json
+++ b/application.json
@@ -14,7 +14,7 @@
       "navStyle": "inline",
       "orientation": "top",
       "position": "static",
-      "showNavbar": true,
+      "showNavbar": false,
       "showSignIn": true
     },
     "themeSetting": {
@@ -53,7 +53,7 @@
       "navStyle": "inline",
       "orientation": "top",
       "position": "static",
-      "showNavbar": true,
+      "showNavbar": false,
       "showSignIn": true
     },
     "themeSetting": {
